Quorum3/Library/Tests/Actions/Pass/Return2ActionsIntToVar.quorum
class Main
    action Main
        integer a = -2
        integer x
        x = bar(foo(a))
        output x
    end

    action foo (integer a) returns integer
        a = a * -1
        return a
    end

    action bar(integer a) returns integer
        a = a * 10
        return a
    end
end