Quorum3/Library/Tests/Actions/Fail/BadVariableInReturn.quorum
class F
    integer x = 1

    action Main
    end

    action foo returns boolean
        return xy = 1
    end
end